--- a/index.html
+++ b/index.html
@@ -1,26 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <title>Music Player</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Christmas Countdown</title>
   </head>
   <body>
-    <div class="music-player">
-      <audio id="audio" src="path_to_your_audio_file.mp3"></audio>
-      <div class="controls">
-        <button id="playBtn">Play</button>
-        <button id="pauseBtn">Pause</button>
-        <input
-          type="range"
-          id="volumeSlider"
-          min="0"
-          max="1"
-          step="0.1"
-          value="1"
-        />
-      </div>
-    </div>
-    <script src="index.js"></script>
+    <h1>Countdown to Christmas</h1>
+    <p id="countdown"></p>
+
+    <script>
+      // Set the date for Christmas
+      const christmasDate = new Date("December 25, 2023 00:00:00").getTime();
+
+      // Update the countdown every second
+      const countdown = setInterval(function () {
+        const now = new Date().getTime();
+        const distance = christmasDate - now;
+
+        // Calculate days, hours, minutes, and seconds remaining
+        const days = Math.floor(distance / (1000 * 60 * 60 * 24));
+        const hours = Math.floor(
+          (distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60)
+        );
+        const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+        const seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+        // Display the countdown
+        document.getElementById(
+          "countdown"
+        ).innerHTML = `${days}d ${hours}h ${minutes}m ${seconds}s`;
+
+        // If the countdown is over, display a message
+        if (distance < 0) {
+          clearInterval(countdown);
+          document.getElementById("countdown").innerHTML = "Merry Christmas!";
+        }
+      }, 1000);
+    </script>
   </body>
 </html>
