On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   index1.html

--- a/index1.html
+++ b/index1.html
@@ -6,9 +6,10 @@
     <title>Document</title>
   </head>
   <body>
-    <button class="gradient-border-button">Click me</button>
+    <!-- 
+    <button class="gradient-border-button">Click me</button> -->
 
-    <style>
+    <!-- <style>
       body {
         background: #1e1f25;
       }
@@ -81,6 +82,6 @@
       /* .gradient-border-button:hover:after {
         opacity: 1;
       } */
-    </style>
+    </style> -->
   </body>
 </html>
