--- a/index1.html
+++ b/index1.html
@@ -6,6 +6,50 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>People entered:</h1>
+    <h2 id="count-el">0</h2>
+    <button id="increment-btn" onclick="increment()">INCREMENT</button>
+
+    <style>
+      body {
+        background-image: url("station.jpg");
+        background-size: cover;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+        font-weight: bold;
+        text-align: center;
+      }
+
+      h1 {
+        margin-top: 10px;
+        margin-bottom: 10px;
+      }
+
+      h2 {
+        font-size: 50px;
+        margin-top: 0;
+        margin-bottom: 20px;
+      }
+
+      button {
+        border: none;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        color: white;
+        font-weight: bold;
+        width: 200px;
+        margin-bottom: 5px;
+        border-radius: 5px;
+      }
+
+      #increment-btn {
+        background: darkred;
+      }
+
+      #save-btn {
+        background: darkgreen;
+      }
+    </style>
     <!-- 
     <button class="gradient-border-button">Click me</button> -->
 
@@ -83,5 +127,6 @@
         opacity: 1;
       } */
     </style> -->
+    <script src="index.js"></script>
   </body>
 </html>
