On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   index1.html

--- a/index1.html
+++ b/index1.html
@@ -127,6 +127,17 @@
         opacity: 1;
       } */
     </style> -->
-    <script src="index.js"></script>
+    <script>
+      let countEl = document.getElementById("count-el"); // pass in arguments
+
+      console.log(countEl);
+
+      let count = 0;
+
+      function increment() {
+        count = count + 1;
+        countEl.innerText = count;
+      }
+    </script>
   </body>
 </html>
