--- a/index1.html
+++ b/index1.html
@@ -9,6 +9,7 @@
     <h1>People entered:</h1>
     <h2 id="count-el">0</h2>
     <button id="increment-btn" onclick="increment()">INCREMENT</button>
+    <button id="save-btn" onclick="save()">SAVE</button>
 
     <style>
       body {
@@ -137,6 +138,10 @@
       function increment() {
         count = count + 1;
         countEl.innerText = count;
+      }
+
+      function save() {
+        console.log(count);
       }
     </script>
   </body>
