On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   index1.html

--- a/index1.html
+++ b/index1.html
@@ -143,6 +143,13 @@
       function save() {
         console.log(count);
       }
+
+      let username = "kolade";
+      let message = "You have tree new notifications";
+
+      let messageToUser = message + ", " + username + "!";
+
+      console.log(messageToUser);
     </script>
   </body>
 </html>
