--- a/index1.html
+++ b/index1.html
@@ -15,8 +15,7 @@
       body {
         background-image: url("station.jpg");
         background-size: cover;
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-          Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+        font-family: "Segoe UI", "Open Sans", "Helvetica Neue", sans-serif;
         font-weight: bold;
         text-align: center;
       }
@@ -131,7 +130,7 @@
     <script>
       let countEl = document.getElementById("count-el"); // pass in arguments
 
-      console.log(countEl);
+      //   console.log(countEl);
 
       let count = 0;
 
