--- a/index1.html
+++ b/index1.html
@@ -10,6 +10,7 @@
     <h2 id="count-el">0</h2>
     <button id="increment-btn" onclick="increment()">INCREMENT</button>
     <button id="save-btn" onclick="save()">SAVE</button>
+    <p id="welcome-el"></p>
 
     <style>
       body {
