On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   index1.html

--- a/index1.html
+++ b/index1.html
@@ -157,8 +157,8 @@
       // Create two variables (name & greeting) that contains your name
       // and the greeting we want to render on the page
 
-      let name = "Per Harald Borgen";
-      let greeting = "Welcome back";
+      let name = "Kolade Matanmi";
+      let greeting = "Welcome back ";
 
       // Render the welcome message using welcomeEl.innerText
       welcomeEl.innerText = greeting + name;
