On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:
  index1.html

--- a/index1.html
+++ b/index1.html
@@ -162,6 +162,15 @@
 
       // Render the welcome message using welcomeEl.innerText
       welcomeEl.innerText = greeting + name;
+      let welcomeEl = document.getElementById("welcome-el");
+
+      welcomeEl.innerText = greeting + name;
+
+      // Add an emoji to the end! 👋
+      // WRITE YOUR CODE BELOW HERE
+      // HINT: count = count + 1
+
+      welcomeEl.innerText += "👋";
     </script>
   </body>
 </html>
