--- a/index1.html
+++ b/index1.html
@@ -11,6 +11,7 @@
     <button id="increment-btn" onclick="increment()">INCREMENT</button>
     <button id="save-btn" onclick="save()">SAVE</button>
     <p id="welcome-el"></p>
+    <p id="save-el">Previous entires:</p>
 
     <style>
       body {
