On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   index1.html

--- a/index1.html
+++ b/index1.html
@@ -187,7 +187,7 @@
       }
 
       function save() {
-        let countStr = count + " - ";
+        let countStr = count + " - " + " ";
         // 2. Create a variable that contains both the count and the dash separator, i.e. "12 - "
         // 3. Render the variable in the saveEl using innerText
         /* so instead of the innertext keyword there is also textcontent*/
