On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   index1.html

--- a/index1.html
+++ b/index1.html
@@ -11,12 +11,10 @@
     <h2 id="count-el">0</h2>
     <button id="increment-btn" onclick="increment()">INCREMENT</button>
     <button id="save-btn" onclick="save()">SAVE</button>
-    <p id="save-el">Previous entires:</p>
+    <p id="save-el">Previous-entires :</p>
 
     <style>
       body {
-        background-image: url("station.jpg");
-        background-size: cover;
         font-family: "Segoe UI", "Open Sans", "Helvetica Neue", sans-serif;
         font-weight: bold;
         text-align: center;
