On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	new file:   315758148_716189799840385_17496892218082876_n.jpg
	modified:   index2.html
	new file:   klite.gif
	modified:   style2.css

--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,10 @@
     <title>Document</title>
   </head>
   <body>
-    <div>
+    <div class="b-img">
+      <img src="315758148_716189799840385_17496892218082876_n.jpg" alt="" />
+    </div>
+    <div class="text">
       <p id="welcome-el"></p>
       <h1>People entered:</h1>
       <h2 id="count-el">0</h2>
@@ -15,5 +18,7 @@
       <button id="save-btn" onclick="save()">SAVE</button>
       <p id="save-el">Previous-entires:</p>
     </div>
+
+    <script src="java.js"></script>
   </body>
 </html>
