--- a/index2.html
+++ b/index2.html
@@ -7,16 +7,15 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="b-img">
-      <img src="315758148_716189799840385_17496892218082876_n.jpg" alt="" />
-    </div>
-    <div class="text">
-      <p id="welcome-el"></p>
-      <h1>People entered:</h1>
-      <h2 id="count-el">0</h2>
-      <button id="increment-btn" onclick="increment()">INCREMENT</button>
-      <button id="save-btn" onclick="save()">SAVE</button>
-      <p id="save-el">Previous-entires:</p>
+    <div>
+      <div class="text">
+        <p id="welcome-el"></p>
+        <h1>People entered:</h1>
+        <h2 id="count-el">0</h2>
+        <button id="increment-btn" onclick="increment()">INCREMENT</button>
+        <button id="save-btn" onclick="save()">SAVE</button>
+        <p id="save-el">Previous-entires:</p>
+      </div>
     </div>
 
     <script src="java.js"></script>
