--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="text">
+    <div class="b-img">
       <p id="welcome-el"></p>
       <h1>People entered:</h1>
       <h2 id="count-el">0</h2>
