On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   index2.html
	modified:   style2.css

--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="b-img">
+    <div class="container">
       <p id="welcome-el"></p>
       <h1>People entered:</h1>
       <h2 id="count-el">0</h2>
