On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   index1.html

--- a/index1.html
+++ b/index1.html
@@ -12,7 +12,10 @@
     <button id="increment-btn" onclick="increment()">INCREMENT</button>
     <button id="save-btn" onclick="save()">SAVE</button>
     <p id="save-el">Previous-entires:</p>
-    <img src="images/shoe.jpeg" alt="Nike shoe" />
+    <img
+      src="43ec367df63994bc263928369cd09a48b60742043787e59fc2a8d1a30b5fb594_800.jpg"
+      alt="Nike shoe"
+    />
     <p>Nike shoe</p>
     <button onclick="purchase()">Purchase - $149</button>
     <p id="error"></p>
