On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   index1.html

--- a/index1.html
+++ b/index1.html
@@ -11,7 +11,7 @@
     <h2 id="count-el">0</h2>
     <button id="increment-btn" onclick="increment()">INCREMENT</button>
     <button id="save-btn" onclick="save()">SAVE</button>
-    <p id="save-el">Previous-entires:</p>
+    <p id="save-el">Previous-entires:&nbsp;</p>
     <img
       src="43ec367df63994bc263928369cd09a48b60742043787e59fc2a8d1a30b5fb594_800.jpg"
       alt="Nike shoe"
